# rustfs

./: .README-CN.md.swp  .copilot-rules.md  .cursorrules  .dockerignore  .gitignore  .pr_body.md  .pre-commit-config.yaml  .rules.md  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CI_OPTIMIZATION_COMPARISON.md  CI_OPTIMIZATION_PLAN.md  CI_OPTIMIZATION_SUMMARY.md  CLA.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMMIT_BODY.txt  COMMIT_MESSAGE.md  COMMIT_OPTIONS.md  COMMIT_READY.md  COMMIT_SHORT.md  CONTRIBUTING.md  COPY_PASTE_COMMIT.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  Dockerfile.decommission-local  Dockerfile.dev  Dockerfile.glibc  Dockerfile.multi-stage  Dockerfile.obs  Dockerfile.release  Dockerfile.source  FAST_LOCK_DESIGN.md  FTPS_SFTP_DESIGN.md  INTERNODE_BUFFER_AND_NEGOTIATION.md  INTERNODE_BUFFER_LIFECYCLE.md  INTERNODE_DATA_TRANSPORT_RFC.md  INTERNODE_TRANSPORT_CAPABILITIES.md  (+54 more)
api/admin/: Cargo.toml
api/admin/src/: error.rs  lib.rs  object_api.rs
appauth/: Cargo.toml
appauth/src/: lib.rs  token.rs
cli/rustfs-gui/: Cargo.toml  Dioxus.toml  README.md  input.css  tailwind.config.js
cli/rustfs-gui/assets/: tailwind.css
cli/rustfs-gui/embedded-rustfs/: README.md
cli/rustfs-gui/src/: main.rs
common/lock/: Cargo.toml
common/lock/src/: drwmutex.rs  lib.rs  local_disk.rs  local_locker.rs  lock_args.rs  lrwmutex.rs  namespace_lock.rs  remote_client.rs
common/protos/: Cargo.toml  build.rs
common/protos/src/: lib.rs  main.rs  node.proto
crates/ahm/: Cargo.toml  architecture.md  architecture_ch.md
crates/ahm/benches/: README.md  adaptive_scheduling.rs  business_io_impact.rs  resource_contention.rs  scanner_performance.rs
crates/ahm/src/: error.rs  lib.rs  metrics.rs  scanner.rs
crates/ahm/tests/: data_usage_fallback_test.rs  endpoint_index_test.rs  heal_bug_fixes_test.rs  heal_integration_test.rs  integration_tests.rs  lifecycle_cache_test.rs  lifecycle_integration_test.rs  (+2 more)
crates/appauth/: Cargo.toml  README.md
crates/audit/: AGENTS.md  Cargo.toml  README.md
crates/audit-logger/: Cargo.toml
crates/common/: Cargo.toml  README.md
crates/concurrency/: Cargo.toml
crates/config/: AGENTS.md  Cargo.toml  README.md
crates/credentials/: Cargo.toml  README.md
crates/crypto/: Cargo.toml  README.md
crates/data-usage/: Cargo.toml
crates/disk/: Cargo.toml
crates/disk/src/: os.rs  (+12 more)
crates/e2e_test/: AGENTS.md  Cargo.toml  README.md
crates/ecstore/: AGENTS.md  Cargo.toml  README.md  README_cn.md  run_benchmarks.sh
crypto/: Cargo.toml
crypto/src/: encdec.rs  error.rs  jwt.rs  lib.rs  metadata.rs  rusty_vault_client.rs  sse.rs  sse_c.rs  sse_kms.rs  sse_s3.rs
e2e_test/: Cargo.toml
e2e_test/src/: lib.rs
ecstore/: BENCHMARK.md  BENCHMARK_ZH.md  Cargo.toml  IMPLEMENTATION_COMPARISON.md  IMPLEMENTATION_COMPARISON_ZH.md  README_cn.md  build.rs  run_benchmarks.sh
ecstore/benches/: comparison_benchmark.rs  erasure_benchmark.rs
ecstore/src/: admin_server_info.rs  bitrot.rs  bucket_meta.rs  checksum.rs  chunk_stream.rs  compress.rs  disk.rs  disk_api.rs  disks_layout.rs  ellipses.rs  encrypt.rs  endpoint.rs  endpoints.rs  erasure.rs  error.rs  event_notification.rs  file_meta.rs  file_meta_inline.rs  format.rs  global.rs  io.rs  lib.rs  list_objects.rs  metrics_realtime.rs  notification_sys.rs  options.rs  peer.rs  peer_rest_client.rs  pools.rs  quorum.rs  rebalance.rs  s3.rs  set_disk.rs  sets.rs  storage_class.rs  store.rs  store_api.rs  store_err.rs  store_init.rs  store_list_objects.rs  (+4 more)
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: archive_extract.rs  bucket_validation.rs  bucket_validation_storage_api.rs  copy_source_range.rs  ecstore_fuzz_compat.rs  local_metadata.rs  path_containment.rs  policy_ingress.rs  storage_compat.rs
iam/: Cargo.toml
iam/src/: arn.rs  auth.rs  cache.rs  error.rs  format.rs  handler.rs  lib.rs  manager.rs  policy.rs  service_type.rs  store.rs  sys.rs  utils.rs
iam/tests/: policy_is_allowed.rs
madmin/: Cargo.toml
madmin/src/: group.rs  heal_command.rs  heal_commands.rs  health.rs  info_commands.rs  lib.rs  metrics.rs  policy.rs  service_commands.rs  trace.rs  user.rs  utils.rs
policy/: Cargo.toml
policy/src/: arn.rs  auth.rs  error.rs  lib.rs  policy.rs  service_type.rs  utils.rs
policy/tests/: policy_is_allowed.rs
reader/: Cargo.toml
reader/src/: error.rs  hasher.rs  lib.rs  reader.rs  readme.md
router/: Cargo.toml
router/src/: handler.rs  handlers.rs  lib.rs  operation.rs  router.rs
rustfs/: Cargo.toml  README.md  build.rs
rustfs/benches/: capacity_scan.rs  s3_operations.rs
rustfs/examples/: console.rs
rustfs/src/: allocator_reclaim.rs  auth.rs  auth_keystone.rs  cluster_snapshot.rs  config_storage_compat.rs  console.rs  delete_tail_activity.rs  diagnose.rs  embedded.rs  error.rs  error_storage_compat.rs  event.rs  grpc.rs  init.rs  lib.rs  license.rs  main.rs  memory_observability.rs  peer_rest_client.rs  profiling.rs  route.rs  runtime_capabilities.rs  runtime_capabilities_storage_compat.rs  runtime_sources.rs  service.rs  startup_audit.rs  startup_auth.rs  startup_background.rs  startup_bucket_metadata.rs  startup_deadlock.rs  startup_embedded.rs  startup_embedded_optional.rs  startup_entrypoint.rs  startup_fs_guard.rs  startup_iam.rs  startup_lifecycle.rs  startup_notification.rs  startup_observability.rs  startup_optional_runtime_sidecars.rs  startup_optional_runtimes.rs  (+24 more)
rustfs/static/: readme.md
rustfs/tests/: README_concurrent_download_tool.md  SWIFT_INTEGRATION_TESTS.md  SWIFT_OBJECT_INTEGRATION_TESTS.md  admin_diagnostic_capability_e2e.rs  concurrent_download_tool.rs  concurrent_get_object_test.rs  diagnose_e2e.rs  embedded_deferred_iam_test.rs  embedded_multi_instance_test.rs  embedded_notification_lifecycle_test.rs  embedded_test.rs  gt1g_get_benchmark_tool.rs  hyper_h1_shutdown_flush_regression.rs  lifecycle_ansible_test.sh  lifecycle_ansible_test.yml  lifecycle_minio_sdk_test.rs  lifecycle_miniosdk_test.py  swift_container_integration_test.rs  swift_object_integration_test.rs
store/: Cargo.toml
store/src/: endpoint.rs  erasure.rs  error.rs  lib.rs  store.rs  stream.rs
(+3338 files in other folders)
